--- a/Android PPT/Android code/3 Event Handling 2/AndroidManifest.xml
+++ b/Android PPT/Android code/3 Event Handling 2/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="demo.mit.com.firstapplication">
+    package="demo.com.firstapplication">
 
     <application
         android:allowBackup="true"
